--- a/dashboard-for-desktop/toc.yml
+++ b/dashboard-for-desktop/toc.yml
@@ -353,6 +353,8 @@
         href: articles/dashboard-designer/designing-dashboard-items/filter-elements/interactivity.md
     - name: Dashboard Item Group
       href: articles/dashboard-designer/designing-dashboard-items/dashboard-item-group.md
+    - name: Tab Container
+      href: articles/dashboard-designer/designing-dashboard-items/tab-container.md
   - name: Data Shaping
     href: articles/dashboard-designer/data-shaping.md
     items:
@@ -595,3 +597,5 @@
         href: articles/dashboard-viewer/dashboard-items/treemap/printing-and-exporting.md
     - name: Filter Elements
       href: articles/dashboard-viewer/dashboard-items/filter-elements.md
+    - name: Tab Container
+      href: articles/dashboard-viewer/dashboard-items/tab-container.md
