--- a/dashboard-for-web/toc.yml
+++ b/dashboard-for-web/toc.yml
@@ -304,6 +304,8 @@
         href: articles/web-dashboard-designer-mode/data-analysis/dashboard-parameters/passing-parameter-values.md
       - name: Requesting Parameter Values
         href: articles/web-dashboard-designer-mode/data-analysis/dashboard-parameters/requesting-parameter-values.md
+    - name: Expression Constants, Operators, and Functions
+      href: articles/web-dashboard-designer-mode/data-analysis/expression-constants-operators-and-functions.md
   - name: Converting Dashboard Items
     href: articles/web-dashboard-designer-mode/converting-dashboard-items.md
   - name: Dashboard Layout
