--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -546,6 +546,15 @@
       href: articles/report-designer/create-popular-reports/create-an-interactive-e-form.md
     - name: Create a Cross-Tab Report
       href: articles/report-designer/create-popular-reports/create-a-cross-tab-report.md
+  - name: Configure Design Settings
+    href: articles/report-designer/configure-design-settings.md
+    items:
+    - name: Change a Report's Measurement Units
+      href: articles/report-designer/configure-design-settings/change-a-report-measurement-units.md
+    - name: Change a Report's Page Settings
+      href: articles/report-designer/configure-design-settings/change-a-report-page-settings.md
+    - name: Enable the Right-To-Left Layout
+      href: articles/report-designer/configure-design-settings/enable-the-right-to-left-layout.md  
   - name: Use Report Elements
     href: articles/report-designer/use-report-elements.md
     items:
@@ -601,7 +610,7 @@
       - name: Manipulate Table Elements
         href: articles/report-designer/use-report-elements/use-tables/manipulate-table-elements.md
       - name: Hide Table Cells
-        href: articles/report-designer/use-report-elements/use-tables/hide-table-cells.m
+        href: articles/report-designer/use-report-elements/use-tables/hide-table-cells.md
     - name: Use Bar Codes
       href: articles/report-designer/use-report-elements/use-bar-codes.md
       items:
@@ -809,15 +818,6 @@
       href: articles/report-designer/customize-appearance/appearance-properties.md
     - name: Report Visual Styles
       href: articles/report-designer/customize-appearance/report-visual-styles.md
-  - name: Provide Interactivity
-    href: articles/report-designer/provide-interactivity.md
-    items:
-    - name: Create Drill-Down Reports
-      href: articles/report-designer/provide-interactivity/create-drill-down-reports.md
-    - name: Sort a Report in Print Preview
-      href: articles/report-designer/provide-interactivity/sort-a-report-in-print-preview.md
-    - name: Edit Content in Print Preview
-      href: articles/report-designer/provide-interactivity/edit-content-in-print-preview.md
   - name: Add Navigation
     href: articles/report-designer/add-navigation.md
     items:
@@ -829,6 +829,15 @@
       href: articles/report-designer/add-navigation/add-bookmarks-and-a-document-map.md
     - name: Create a Table of Contents
       href: articles/report-designer/add-navigation/add-a-table-of-contents.md
+  - name: Provide Interactivity
+    href: articles/report-designer/provide-interactivity.md
+    items:
+    - name: Create Drill-Down Reports
+      href: articles/report-designer/provide-interactivity/create-drill-down-reports.md
+    - name: Sort a Report in Print Preview
+      href: articles/report-designer/provide-interactivity/sort-a-report-in-print-preview.md
+    - name: Edit Content in Print Preview
+      href: articles/report-designer/provide-interactivity/edit-content-in-print-preview.md
   - name: Add Extra Information
     href: articles/report-designer/add-extra-information.md
     items:
@@ -838,6 +847,13 @@
       href: articles/report-designer/add-extra-information/display-the-current-date-and-time-in-a-report.md
     - name: Display the User Name in a Report
       href: articles/report-designer/add-extra-information/display-the-user-name-in-a-report.md
+  - name: Use Expressions
+    href: articles/report-designer/use-expressions.md
+    items:
+    - name: Expression Syntax
+      href: articles/report-designer/use-expressions/expression-syntax.md
+  - name: Preview, Print and Export Reports
+    href: articles/report-designer/preview-print-and-export-reports.md
   - name: Report Designer Tools
     href: articles/report-designer/report-designer-tools.md
     items:
