--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -220,9 +220,9 @@
       - name: Filter Data by Field Values
         href: articles/pivot-table/data-presentation/filter-data/filter-data-by-field-values.md
         items:
-        - name: Invoke a Filter Popup Window
+        - name: Invoke a Filter Window
           href: articles/pivot-table/data-presentation/filter-data/filter-data-by-field-values/invoke-a-filter-popup-window.md
-        - name: Using Filter Popup Windows
+        - name: Using Filter Windows
           href: articles/pivot-table/data-presentation/filter-data/filter-data-by-field-values/using-filter-popup-windows.md
         - name: Filtering Options
           href: articles/pivot-table/data-presentation/filter-data/filter-data-by-field-values/filtering-options.md
