--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -524,6 +524,8 @@
         href: articles/report-designer/report-designer-for-winforms/create-popular-reports/create-a-master-detail-report-use-detail-report-bands.md   
       - name: Create a Master-Detail Report (Use Subreports)
         href: articles/report-designer/report-designer-for-winforms/create-popular-reports/create-a-master-detail-report-use-subreports.md
+      - name: Create a Hierarchical Report
+        href: articles\report-designer\report-designer-for-winforms\create-popular-reports\create-a-hierarchical-report.md         
       - name: Create a Vertical Report
         href: articles\report-designer\report-designer-for-winforms\create-popular-reports\create-a-vertical-report.md        
       - name: Create Labels and Badges
