--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -839,6 +839,13 @@
         href: articles/report-designer/report-designer-for-winforms/add-extra-information/display-the-user-name-in-a-report.md
       - name: Display the Current Date and Time in a Report
         href: articles/report-designer/report-designer-for-winforms/add-extra-information/display-the-current-date-and-time-in-a-report.md
+    - name: Merge Reports
+      href: articles/report-designer/report-designer-for-winforms/merge-reports.md
+      items:
+      - name: Add a Report to the End/Beginning
+        href: articles/report-designer/report-designer-for-winforms/merge-reports/add-a-report-to-the-end-beginning.md
+      - name: Use Data-Driven Page Sequence
+        href: articles/report-designer/report-designer-for-winforms/merge-reports/use-data-driven-page-sequence.md
     - name: Use Expressions
       href: articles/report-designer/report-designer-for-winforms/use-expressions.md
       items:
