--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -501,6 +501,10 @@
         href: articles/report-designer/report-designer-for-winforms/bind-to-data/bind-a-report-to-json-data.md
       - name: Bind a Report to an XPO Persistent Object
         href: articles\report-designer\report-designer-for-winforms\bind-to-data\bind-a-report-to-an-xpo-persistent-object.md        
+      - name: Bind a Report to a Federated Data Source
+        href: articles\report-designer\report-designer-for-winforms\bind-to-data\bind-a-report-to-a-federated-data-source.md        
+      - name: Bind a Report to a Federated Master-Detail Data Source
+        href: articles\report-designer\report-designer-for-winforms\bind-to-data\bind-a-report-to-a-federated-master-detail-data-source.md        
       - name: Data Binding Modes
         href: articles/report-designer/report-designer-for-winforms/bind-to-data/data-binding-modes.md
       - name: Bind Report Controls to Data (Expression Bindings)
