Add the Merge Reports section

--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -853,6 +853,13 @@
       href: articles/report-designer/add-extra-information/display-the-current-date-and-time-in-a-report.md
     - name: Display the User Name in a Report
       href: articles/report-designer/add-extra-information/display-the-user-name-in-a-report.md
+  - name: Merge Reports
+    href: articles/report-designer/merge-reports.md
+    items:
+    - name: Add a Report to the End/Beginning
+      href: articles/report-designer/merge-reports/add-a-report-to-the-end-beginning.md
+    - name: Use Data-Driven Page Sequence
+      href: articles/report-designer/merge-reports/use-data-driven-page-sequence.md
   - name: Use Expressions
     href: articles/report-designer/use-expressions.md
     items:
