--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -517,8 +517,10 @@
   - name: Bind to Data
     href: articles/report-designer/bind-to-data.md
     items:
-    - name: Bind a Report to Data
-      href: articles/report-designer/bind-to-data/bind-a-report-to-data.md
+    - name: Bind a Report to a Database
+      href: articles/report-designer/bind-to-data/bind-a-report-to-a-database.md
+    - name: Bind a Report to JSON Data
+      href: articles/report-designer/bind-to-data/bind-a-report-to-json-data.md   
     - name: Data Binding Modes
       href: articles/report-designer/bind-to-data/data-binding-modes.md
     - name: Bind Report Controls to Data (Expression Bindings)
