--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -743,6 +743,8 @@
         href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-change-a-control-appearance.md
       - name: Conditionally Change a Label's Text
         href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-change-a-label-text.md
+      - name: Conditionally Change a Band's Visibility
+        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-change-a-bands-vibility-expression-binding.md
       - name: Conditionally Filter Report Data
         href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-filter-report-data.md
       - name: Conditionally Suppress Controls
@@ -768,6 +770,8 @@
         href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-change-a-control-appearance.md
       - name: Conditionally Change a Label's Text
         href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-change-a-label-text.md
+      - name: Conditionally Change a Band's Visibility 
+        href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-change-a-bands-visibility-data-binding.md
       - name: Conditionally Filter Report Data
         href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-filter-report-data.md
       - name: Conditionally Suppress Controls
