--- a/dashboard-for-desktop/toc.yml
+++ b/dashboard-for-desktop/toc.yml
@@ -20,8 +20,8 @@
       href: articles/dashboard-designer/providing-data/binding-to-extract-data-sources.md
     - name: Data Processing Modes
       href: articles/dashboard-designer/providing-data/data-processing-modes.md
-    - name: Binding to EF Data Sources
-      href: articles/dashboard-designer/providing-data/binding-to-ef-data-sources.md
+    - name: Connect to EF Data Sources
+      href: articles/dashboard-designer/providing-data/connect-to-ef-data-sources.md
     - name: Binding to Federated Data Source
       href: articles/dashboard-designer/providing-data/binding-to-federated-data-source.md
     - name: Binding to JSON Data Sources
