--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -200,6 +200,8 @@
       href: articles/pivot-table/data-editing/edit-data-in-pivot-tables.md
     - name: Edit Unbound Expression
       href: articles/pivot-table/data-editing/edit-unbound-expression.md
+    - name: Pivot Grid Expression Syntax
+      href: articles/pivot-table/data-editing/pivot-grid-expression-syntax.md
   - name: Data Presentation
     href: articles/pivot-table/data-presentation.md
     items:
@@ -247,6 +249,8 @@
       href: articles/pivot-table/data-presentation/apply-conditional-formatting.md
     - name: Change Summary Type in Pivot Tables
       href: articles/pivot-table/data-presentation/change-summary-type-in-pivot-tables.md
+  - name: Exporting and Printing
+    href: articles/pivot-table/exporting-and-printing/exporting-and-printing.md
   - name: Layout Customization
     href: articles/pivot-table/layout-customization.md
     items:
