--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -689,6 +689,7 @@
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-charts-and-pivot-grids/link-a-chart-and-a-pivot-grid.md
       - name: Use Cross Tabs
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs.md
+        items:
         - name: Cross Tab Overview
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs/cross-tab-overview.md
         - name: Cross Tab Fields
