Apply Anna's comments

--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -694,10 +694,12 @@
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs/cross-tab-overview.md
         - name: Cross Tab Fields
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs/cross-tab-fields.md
-        - name: Cross Tab Settings
-          href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs/cross-tab-settings.md
-        - name: Layout Options
-          href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs/layout-options.md
+        - name: Shape Data
+          href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs/shape-data.md
+        - name: Layout and Print Options
+          href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs/layout-and-print-options.md
+        - name: Customize Appearance
+          href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-cross-tabs/customize-appearance.md
       - name: Use Gauges and Sparklines
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-gauges-and-sparklines.md
         items:
