--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -579,6 +579,8 @@
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/manipulate-report-elements/reuse-report-controls.md
         - name: Arrange Report Controls
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/manipulate-report-elements/arrange-report-controls.md
+        - name: Convert Labels to Table
+          href: articles/report-designer/report-designer-for-winforms/use-report-elements/manipulate-report-elements/convert-labels-to-table.md
         - name: Add Report Controls to Containers
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/manipulate-report-elements/add-report-controls-to-containers.md
         - name: Validate the Report Layout
