--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -1011,8 +1011,8 @@
           items:
           - name: Specify JSON Data Location
             href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard/connect-to-a-json-data-source/specify-json-data-location.md
-          - name: Specify Request Parameters
-            href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard/connect-to-a-json-data-source/specify-request-parameters.md        
+          - name: Configure Web Service Endpoint Request
+            href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard/connect-to-a-json-data-source/configure-web-service-endpoint-request.md        
           - name: Select Data Fields
             href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard/connect-to-a-json-data-source/select-data-fields.md
         - name: Connect to an XPO Data Source
