--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -1054,6 +1054,8 @@
           href: articles/report-designer/report-designer-for-winforms/report-designer-tools/ui-panels/property-grid-non-tabbed-view.md
         - name: Group and Sort Panel
           href: articles/report-designer/report-designer-for-winforms/report-designer-tools/ui-panels/group-and-sort-panel.md
+    - name: Localize Reports
+      href: articles/report-designer/report-designer-for-winforms/localize-reports.md
   - name: Report Designer for WPF
     href: articles/report-designer/report-designer-for-wpf.md
     items:
